# Bitcoin-in-cpp

./: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  FieldElement.cpp  FieldElement.h  FiniteElement.cpp  FiniteElement.h  Point.cpp  Point.h  README.md  Script.cpp  Script.h  Tx.cpp  Tx.h  address_finder.cpp  cryptography.cpp  cryptography.h  finite_element_set_explorer.cpp  generate_address.cpp  main.cpp  secp256k1.cpp  secp256k1.h
script/: crawl.py  get_balance.py  raw_transaction.py
test/: test.cpp  test_FiniteElement.h  test_Point.h  test_cryptography.h  test_secp256k1.h  test_tx.h
